fix: align footer on smaller screen

--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -8,9 +8,9 @@
     display: flex
     justify-content: space-between
 
-    +max-screen($breakpoint-md)
+    +max-screen($breakpoint-sm)
       flex-direction: column
-      align-items: stretch
+      align-items: center
       gap: rem(30px)
 
   &__col
@@ -19,7 +19,7 @@
 
     &--1
       justify-content: space-between
-      +max-screen($breakpoint-md)
+      +max-screen($breakpoint-sm)
         align-items: center
         gap: rem(20px)
 
@@ -31,13 +31,13 @@
     align-items: flex-end
     flex-wrap: wrap
     gap: rem(15px)
-    +max-screen($breakpoint-md)
+    +max-screen($breakpoint-sm)
       justify-content: center
 
     li
       line-height: 0.5
       text-align: right
-      +max-screen($breakpoint-md)
+      +max-screen($breakpoint-sm)
         text-align: center
 
     a
@@ -45,20 +45,20 @@
 
     &--two-cols
       li
-        +max-screen($breakpoint-md)
+        +max-screen($breakpoint-sm)
           flex: 0 1 calc(50% - 15px)
 
     &--three-cols
       li
-        +max-screen($breakpoint-md)
+        +max-screen($breakpoint-sm)
           flex: 0 1 calc(33% - 15px)
 
-    +max-screen($breakpoint-md)
+    +max-screen($breakpoint-sm)
       align-items: center
 
   &__copyright
     +adaptive-value('font-size', 20, 14, 1)
     text-align: center
     margin-top: 1.2em
-    +max-screen($breakpoint-md)
+    +max-screen($breakpoint-sm)
       margin-top: 1.5em
